exports[`@handl/client > request > correct response data #0`] =
{
  "_cacheMetadata": {
    "query": {
      "cacheControl": {
        "maxAge": 1,
        "public": true
      },
      "ttl": 297471601000
    },
    "query.organization": {
      "cacheControl": {
        "maxAge": 1,
        "public": true
      },
      "ttl": 297471601000
    }
  },
  "data": {
    "organization": {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook"
    }
  }
};

exports[`@handl/client > request > correct cache data #0`] =
{
  "entries": [
    [
      "dataEntities::Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook"
      }
    ],
    [
      "queryResponses::ea1cbc58eca798225b53f59d95ffb23a",
      {
        "cacheMetadata": {
          "query": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          },
          "query.organization": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          }
        },
        "data": {
          "organization": {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "email": "",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook",
            "name": "Facebook",
            "url": "https://github.com/facebook"
          }
        }
      }
    ],
    [
      "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook"
      }
    ]
  ],
  "metadata": [
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 410,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "dataEntities::Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 410,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "queryResponses::ea1cbc58eca798225b53f59d95ffb23a",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 678,
      "tags": [],
      "updatedCount": 0
    }
  ]
};
